# cloudman

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
ci/: before_deploy.sh  script.sh
src/: cloudman.rs  help.md  ncurses_theme.toml
src/views/: bottombar_view.rs  foo_view.rs  key_codes.rs  log_view.rs  mod.rs  table_view.rs
