[package]
name = "cloudman-rs"
version = "0.1.0"
authors = ["Remco Verhoef <remco@dutchcoders.io>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

[build-dependencies]
built = "0.4"

[dependencies]
cursive = { version = "0.15", features = ["toml", "markdown"] }
caseless = "*"
dirs = "*"
rand = "*"
tokio-core = "*"
futures = "*"
enum-map = "*"
hashbrown = "*"
base64 = "*"
vte = "*"
clap = "3.0.0-beta.1"

rusoto_core = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_ec2 = { version = "0.42", default_features = false, features = ["rustls"] }
rusoto_logs = { version = "0.42", default_features = false, features = ["rustls"] }
