[package]
name = "cloudman-rs"
version = "0.1.3"
authors = ["Remco Verhoef <remco@dutchcoders.io>"]
edition = "2018"
build = "build.rs"
readme = "README.md"

[build-dependencies]
built = "0.4"

[dependencies]
cursive = { version = "0.16", features = ["toml", "markdown"] }
caseless = "*"
dirs = "*"
rand = "*"
tokio = "0.2"
tokio-core = "*"
enum-map = "*"
hashbrown = "*"
base64 = "*"
vte = "*"
clap = "3.0.0-beta.1"

rusoto_core = { version = "0.45", default_features = false, features = ["native-tls"] }
rusoto_ec2 = { version = "0.45", default_features = false, features = ["native-tls"] }
rusoto_logs = { version = "0.45", default_features = false, features = ["native-tls"] }
